<resources>
    <string name="app_name">Projet RSA 2020</string>
    <string name="decrypter_rsa">Communication RSA</string>
    <string name="generer_les_codes_rsa">Générer les codes RSA / Recevoir la clé public</string>
    <string name="message_re_u">Message reçu</string>
    <string name="d_crypter">Décrypter</string>
    <string name="message_envoyer">Message à envoyer</string>
    <string name="encrypter_et_envoyer">Encrypter et Envoyer</string>
    <string name="afficher_cl_rsa">Afficher clé RSA</string>
    <string name="lire_ip_et_ou_port">Loader l\'ancienne IP et l\'ancien port</string>
    <string name="devenir_client_default">Devenir client (default)</string>
    <string name="devenir_serveur">Devenir Serveur</string>
    <string name="FbiProtection"> Bienvenue à l\'application de privatisation des communications. Pour commencer à utiliser l\'application établisser une connection. Ensuite, générez ou recevez les clés. Finalement commencez à communiquez.</string>
    <string name="titre">Messagerie Recevoir-Sans-Agent</string>
</resources>
